[gd_scene load_steps=2 format=3 uid="uid://bu8d7asqns5ix"]

[ext_resource type="Script" uid="uid://4qcl1yvmbuwp" path="res://assets/general-ai-topics/games/interactive-novel/scripts/novel_ui.gd" id="1_pnna3"]

[node name="NovelUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pnna3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TextLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 18
text = "Story text will appear here..."
autowrap_mode = 3

[node name="ChoicesContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 10

[node name="AttributesLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7898787, 0.7898787, 0.78987867, 1)
theme_override_font_sizes/font_size = 14
text = "Attributes will appear here..."
autowrap_mode = 2
